# telegram_carousel_bot

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
bot/: __main__.py  carousel.py  collector.py  config.py  pending.py
bot/handlers/: images.py  start.py  title.py
tests/: test_carousel.py  test_collector.py  test_pending.py
